AC_INIT([Build Engine], [0.1], [jf@jonof.id.au], [build])

AC_CANONICAL_HOST

AC_CONFIG_HEADERS([config.h])
AM_INIT_AUTOMAKE

AC_PROG_CXX
AC_PROG_CC
AC_PROG_RANLIB


enable_superbuild=yes
enable_polymost=yes
enable_opengl=yes
enable_dynamic_opengl=yes
enable_asm=yes
enable_gtk=yes
enable_dynamic_gtk=yes
AC_ARG_ENABLE([superbuild], [AS_HELP_STRING([--disable-superbuild],
	      	[disables 'super build' features])], [
	if test x$enableval = xno; then
		enable_superbuild=no
	fi
])
AC_ARG_ENABLE([polymost], [AS_HELP_STRING([--disable-polymost],
	      	[disables Polymost features])], [
	if test x$enableval = xno; then
		enable_polymost=no
	fi
])
AC_ARG_ENABLE([opengl], [AS_HELP_STRING([--disable-opengl],
	      	[disables Polymost OpenGL features])], [
	if test x$enableval = xno; then
		enable_opengl=no
	fi
])
AC_ARG_ENABLE([dynamic-opengl], [AS_HELP_STRING([--disable-dynamic-opengl],
	      	[use compile-time linkage to OpenGL libs])], [
	if test x$enableval = xno; then
		enable_dynamic_opengl=no
	fi
])
AC_ARG_ENABLE([assembly], [AS_HELP_STRING([--disable-assembly],
	      	[disables use of assembly code])], [
	if test x$enableval = xno; then
		enable_asm=no
	fi
])
AC_ARG_ENABLE([gtk], [AS_HELP_STRING([--disable-gtk],[disables use of GTK+])], [
	if test x$enableval = xno; then
		enable_gtk=no
	fi
])
AC_ARG_ENABLE([dynamic-gtk], [AS_HELP_STRING([--disable-dynamic-gtk],
	      	[use compile-time linkage to GTK+ libs])], [
	if test x$enableval = xno; then
		enable_dynamic_gtk=no
	fi
])
AM_CONDITIONAL([SUPERBUILD],     [test x$enable_superbuild     = xyes])
AM_CONDITIONAL([POLYMOST],       [test x$enable_polymost       = xyes])
AM_CONDITIONAL([USE_OPENGL],     [test x$enable_opengl         = xyes])
AM_CONDITIONAL([DYNAMIC_OPENGL], [test x$enable_dynamic_opengl = xyes])
AM_CONDITIONAL([NOASM],          [test x$enable_asm            = xno])
AM_CONDITIONAL([LINKED_GTK],     [test x$enable_dynamic_gtk    = xno])


case $host_os in
  *mingw32*)
    host_platform="windows"
    ;;
  *)
    host_platform="other"
    ;;
esac
AM_CONDITIONAL([RENDERTYPEWIN], [test x$host_platform = xwindows])
AM_CONDITIONAL([RENDERTYPESDL], [test x$host_platform = xother])


AM_PATH_SDL([1.2.0], [
	have_sdl=yes
	SDL_LIBS=`$SDL_CONFIG --libs`
	SDL_CFLAGS=`$SDL_CONFIG --cflags`
], [
	have_sdl=no
	if test x$host_platform = xother; then
		AC_MSG_ERROR([No SDL library found])
	fi
])

PKG_CHECK_MODULES(GTK, gtk+-2.0, [have_gtk=yes], [have_gtk=no])
if test x$enable_gtk = xno; then
	have_gtk=no
fi
AM_CONDITIONAL([HAVE_GTK2], [test x$have_gtk = xyes])
AC_SUBST([GTK_CFLAGS])
AC_SUBST([GTK_LIBS])



AC_C_INLINE
AC_C_BIGENDIAN
AC_TYPE_INT64_T
AC_TYPE_INT32_T
AC_TYPE_INT16_T
AC_TYPE_INT8_T
AC_TYPE_UINT64_T
AC_TYPE_UINT32_T
AC_TYPE_UINT16_T
AC_TYPE_UINT8_T
AC_TYPE_OFF_T
AC_TYPE_SIZE_T
AC_TYPE_SSIZE_T
AC_TYPE_INTPTR_T
AC_TYPE_UINTPTR_T
AC_CHECK_TYPES([ptrdiff_t])

AC_CONFIG_FILES([Makefile
		 src/Makefile
		 kenbuild/Makefile
		 tools/Makefile])
AC_OUTPUT
