AC_INIT([Build Engine], [0.1], [jf@jonof.id.au], [build])

AC_CANONICAL_HOST

AC_CONFIG_HEADERS([config.h])
AM_INIT_AUTOMAKE

AC_DISABLE_SHARED
AC_PROG_LIBTOOL

AC_PROG_CXX
AC_PROG_CC
AC_PROG_RANLIB


m4_include([configure.inshared])


AC_C_INLINE
AC_C_BIGENDIAN
AC_TYPE_INT64_T
AC_TYPE_INT32_T
AC_TYPE_INT16_T
AC_TYPE_INT8_T
AC_TYPE_UINT64_T
AC_TYPE_UINT32_T
AC_TYPE_UINT16_T
AC_TYPE_UINT8_T
AC_TYPE_OFF_T
AC_TYPE_SIZE_T
AC_TYPE_SSIZE_T
AC_TYPE_INTPTR_T
AC_TYPE_UINTPTR_T
AC_CHECK_TYPES([ptrdiff_t])

AC_CONFIG_FILES([Makefile
		 libsquish/Makefile
		 src/Makefile
		 kenbuild/Makefile
		 tools/Makefile])
AC_OUTPUT

