bin_PROGRAMS = kextract kgroup transpal wad2art wad2map arttool

AM_CPPFLAGS = -I$(srcdir)/../include

kextract_SOURCES=kextract.c
kextract_LDADD=../src/libengine.la

kgroup_SOURCES=kgroup.c
kgroup_LDADD=../src/libengine.la

transpal_SOURCES=transpal.c
transpal_LDADD=../src/libengine.la

wad2art_SOURCES=wad2art.c
wad2art_LDADD=../src/libengine.la

wad2map_SOURCES=wad2map.c
wad2map_LDADD=../src/libengine.la

arttool_SOURCES=arttool.cc
arttool_LDADD=../src/libengine.la

